delete unused file, add Map component, and update README.md file.

--- a/src/style/common/common.scss
+++ b/src/style/common/common.scss
@@ -122,4 +122,8 @@
   .header-content .ant-menu-item-selected > a {
     color: #019bfd !important;
   }
+  // 首页地图北京
+  .dataMap {
+    background: url("../../style/img/background.png") no-repeat;
+  }
 }
