--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -6,7 +6,7 @@
   z-index: 1000;
 }
 :global {
-  .esage-modal-panel {
+  .modal-panel {
     .ant-modal {
       width: 800px !important;
       //.ant-modal-header {
